files/script/test_all/parse_error/math/test_var_math_error1.ll

def main()
{
    var safe_1 = 0xl32l34

}

#script("script/test_all/parse_error/math/test_var_math_error1.ll")
